# prompt-evaluator

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
backend/: .env.example  config.yaml  generate_config.py  pyproject.toml  tmp_test.py
backend/app/: database.py  llm_service.py  main.py  models.py  schemas.py
backend/app/routers/: prompts.py  stream.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ModelResponse.css  ModelResponse.jsx  PromptDetail.css  PromptDetail.jsx  PromptForm.css  PromptForm.jsx  PromptHistory.css  PromptHistory.jsx  Statistics.css  Statistics.jsx
frontend/src/services/: api.js
frontend/src/utils/: statistics.js
