[project]
name = "oci-llm-comparison-backend"
version = "1.0.0"
description = "Backend API for OCI LLM Comparison Demo"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "python-dotenv==1.0.0",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "backoff>=2.2.0",
    "pyyaml>=6.0",
    "appdirs>=1.4.0",
    "rq>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

